Configuración para la conexión a la base de datos

--- a/fastboard/src/main/resources/application.properties
+++ b/fastboard/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=fastboard
 server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/fastboard
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
