Configurando sesiones de usuario y permisos

--- a/fastboard/src/main/resources/application.properties
+++ b/fastboard/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/fastboard
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.security.password.encoder=org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder
 
