Modificando configuracion Spring Security

--- a/fastboard/src/main/resources/application.properties
+++ b/fastboard/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=fastboard
 server.port=8080
+
+# Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/fastboard
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+
+# Security configuration
 spring.security.password.encoder=org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder
 
