--- a/fastboard/pom.xml
+++ b/fastboard/pom.xml
@@ -84,9 +84,9 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
-    		<groupId>io.jsonwebtoken</groupId>
-    		<artifactId>jjwt</artifactId>
-    		<version>0.12.6</version>
+    		<groupId>com.auth0</groupId>
+    		<artifactId>java-jwt</artifactId>
+    		<version>4.4.0</version>
 		</dependency>
 
  </dependencies>
